--- a/admin-portal/src/app/components/nav-bar/nav-bar.component.html
+++ b/admin-portal/src/app/components/nav-bar/nav-bar.component.html
@@ -1,3 +1,9 @@
-<p>
-  nav-bar works!
-</p>
+<mat-toolbar class="mat-primary">
+	<h3 [style.color]="'yellow'">ADMIN PORTAL</h3>
+	<span class="example-spacer"></span>
+	<span [hidden]="!loggedIn"><a mat-button routerLink=".">View Book List</a></span>
+	<span [hidden]="!loggedIn"><a mat-button routerLink=".">Add a Book</a></span>
+	<span [hidden]="!loggedIn"><a mat-button routerLink=".">Logout</a></span>
+</mat-toolbar>	
+<br>
+<button mat-raised-button class="mat-warn" (click)="toggelDisplay()">Toggel</button>
